# notepad4

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  AStyle.txt  License.txt  Notepad2.cppcheck  Notepad2.ini  Notepad2.reg  Notepad4.cppcheck  appveyor.yml  readme.md  ruff.toml  src-grep.bat  update_rev.bat  version.sh  version.txt
.github/workflows/: Build_zh-Hans_x64.yml  main.yml
back/: Lex template.cxx  LexApache.cxx  LexCMake.cxx  LexCPP.cxx  LexCPP0.cxx  LexConfig.cxx  LexMakefile.cxx  LexNsis.cxx  LexPython.cxx  cut.cxx  stlBoo.c  stlCLI.c  stlCMake0.c  stlIDL.c
darkmodelib/: DarkModeSubclass.cpp  DarkModeSubclass.h  Darkmodelib.cpp  Darkmodelib.h  DmlibColor.cpp  DmlibColor.h  DmlibDpi.cpp  DmlibDpi.h  DmlibHook.cpp  DmlibPaintHelper.cpp  DmlibPaintHelper.h  DmlibSubclass.cpp  DmlibSubclass.h  DmlibSubclassControl.cpp  DmlibSubclassControl.h  DmlibSubclassWindow.cpp  DmlibSubclassWindow.h  DmlibWinApi.cpp  ModuleHelper.h  UAHMenuBar.h  Version.h
darkmodelib/include/: Darkmodelib.h
darkmodelib/src/: Darkmodelib.cpp  DmlibColor.cpp  DmlibColor.h  DmlibDpi.cpp  DmlibDpi.h  DmlibHook.cpp  DmlibSubclass.cpp  DmlibSubclass.h  DmlibSubclassControl.cpp  DmlibSubclassControl.h  DmlibSubclassWindow.cpp  DmlibSubclassWindow.h  DmlibWinApi.cpp  DmlibWinApi.h  IatHook.h  MemoryHelper.h  MemoryHelperDef.h  ModuleHelper.h  UAHMenuBar.h  Version.h
doc/: AATree.html  AStyle.txt  FileExt.txt  License.txt  Notepad2 DarkTheme.ini  Notepad2.ini  Notepad2.reg  Notepad2.txt  Notepad4 DarkTheme.ini  Notepad4.ini  Open with Notepad2 (remove).reg  Open with Notepad2 (with Icon).reg  Open with Notepad2.reg  Readme-mod.txt  Readme.txt  Snippet.h  String.h  release.md
doc/my_ini/: Notepad4 DarkTheme.ini  Notepad4.ini
doc/ref/: String.h
doc/utf8-dfa/: dfa.html
locale/: Locale.py  Locale.sln  build.bat  build_arm.bat  build_win32.bat
locale/de/: Notepad2(de).vcxproj  Notepad2.rc  Notepad4(de).vcxproj  Notepad4.rc  matepath(de).vcxproj  matepath.rc  metapath(de).vcxproj  (+1 more)
metapath/: metapath.vcproj  metapath.vcxproj  metapath.vcxproj.filters
res/: Copy.cur  Copy_min.cur  Notepad2.exe.manifest  Notepad2.exe.manifest.conf  Notepad4.exe.manifest
scintilla/: EncodingDump.py  GraphicTest.cpp  License.txt  tidy-gcc.bat  tidy.bat
src/: Bridge.cpp  DarkMode.cpp  DarkMode.h  Dialogs.c  Dialogs.cpp  Dialogs.h  Dlapi.c  Dlapi.cpp  Dlapi.h  Edit.c  Edit.cpp  Edit.h  EditAutoC.c  EditAutoC.cpp  EditAutoC_Data0.c  EditAutoC_Data0.h  EditAutoC_WordList.c  EditEncoding.c  EditEncoding.cpp  EditLexer.h  Edit_Fold.c  Helpers.c  Helpers.cpp  Helpers.h  Notepad2.c  Notepad2.h  Notepad2.rc  Notepad2.vcxproj  Notepad2.vcxproj.filters  Notepad2.ver  Notepad4.cpp  Notepad4.h  Notepad4.rc  Notepad4.ver  Print.cpp  Resource.h  SciCall.h  Styles.c  Styles.cpp  Styles.h  (+10 more)
tools/: AccessKey.py  Bitmap.py  CountColor.py  FindPrime.py  GenerateTable.py  ImageTool.py  KeywordCore.py  KeywordHelper.py  KeywordUpdate.py  LexerConfig.py  Misc.py  ResourceFile.py  StringSwitch.py  Toolset.py  VCToolset.py  readme.txt  str_switch.py
tools/lang/: ABAQUS.inp  APDL.apdl  APDL.cdb  ActionScript.as  Asymptote.asy  AutoHotkey_H.ahk  AutoHotkey_L.ahk  AutoIt3.au3  AviSynth.avs  Awk.awk  Bash.sh  Batch.bat  C.c  CMake.cmake  CPP.cpp  CSS.css  CSharp.cs  CShell.csh  Cangjie.cj  CoffeeScript.coffee  D.d  Dart.dart  Elixir.ex  Erlang.erl  FSharp.fs  Fortran.f  GN.gn  Geogebra.ggb  Go.go  Gradle.gradle  GraphViz.dot  Groovy.groovy  HSS.hss  HaXe.hx  Haskell.hs  Haxe.hx  Hive.hsql  InnoSetup.iss  Jamfile.jam  Java.java  (+49 more)
(+584 files in other folders)
